--- a/global.yaml
+++ b/global.yaml
@@ -346,6 +346,27 @@ Resources:
       ManagedPolicyArns:
         - arn:aws:iam::aws:policy/CloudWatchLogsFullAccess
 
+  JacktripEC2InstanceRole:
+    Type: AWS::IAM::Role
+    Properties:
+      AssumeRolePolicyDocument:
+        Version: '2012-10-17'
+        Statement:
+          - Effect: Allow
+            Principal:
+              Service: ec2.amazonaws.com
+            Action: sts:AssumeRole
+      ManagedPolicyArns:
+        - arn:aws:iam::aws:policy/AmazonSSMManagedInstanceCore
+
+  JacktripEC2InstanceProfile:
+    Type: 'AWS::IAM::InstanceProfile'
+    Properties:
+      InstanceProfileName: JacktripEC2InstanceProfile
+      Path: /
+      Roles:
+        - !Ref JacktripEC2InstanceRole
+
 Outputs:
   StateMachineRoleArn:
     Description: Arn for the Jacktrip State Machine
