--- a/regional.yaml
+++ b/regional.yaml
@@ -41,7 +41,7 @@ Resources:
             # - Effect: Allow
             #   Action:
             #     - iam:PassRole
-            #   Resource: !Sub 'arn:${AWS::Partition}:ec2:${AWS::Region}:${AWS::AccountId}:instance/*'
+            #   Resource: !Sub 'arn:*:ec2:*:${AWS::AccountId}:instance/*'
       Environment:
         Variables:
           ec2SecurityGroup: !Ref JacktripEC2SecurityGroup
@@ -263,6 +263,14 @@ Resources:
                 - 'jackd -R -t500 -ddummy -r{{samplingRate}} -p{{bufferSize}} &'
                 - 'cd /home/ubuntu'
                 - './jacktrip -S &'
-                - 'python3 -m http.server 8000'
+                - 'python3 -m http.server 8000 &'
                 - 'echo "Run Jacktrip Successful"'
       DocumentType: Command
+
+  # SSM Parameter
+  ContactWebsocketLambdaSSM:
+    Type: AWS::SSM::Parameter
+    Properties:
+      Name: ContactWebSocketFunctionName
+      Type: String
+      Value: !Ref ContactWebSocket
