fixed state machine definition, fixed create and update external returning null

--- a/global.yaml
+++ b/global.yaml
@@ -63,8 +63,8 @@ Resources:
             RequestParameters:
               - method.request.querystring.user:
                   Required: true
-              - method.request.header.Authorization:
-                  Required: true
+            Auth:
+              Authorizer: NONE
       Policies:
         - DynamoDBCrudPolicy:
             TableName: !Ref UserServerTable
