--- a/global.yaml
+++ b/global.yaml
@@ -63,8 +63,8 @@ Resources:
             RequestParameters:
               - method.request.querystring.user:
                   Required: true
-            Auth:
-              Authorizer: NONE
+              - method.request.header.Authorization:
+                  Required: true
       Policies:
         - DynamoDBCrudPolicy:
             TableName: !Ref UserServerTable
