--- a/regional.yaml
+++ b/regional.yaml
@@ -187,7 +187,7 @@ Resources:
   JacktripSqsSnsSubscription:
     Type: AWS::SNS::Subscription
     Properties:
-      TopicArn: !Sub arn:aws:sns:${CentralRegion}:173513177120:JacktripSnsTopic.fifo
+      TopicArn: !Sub arn:aws:sns:${CentralRegion}:${AWS::AccountId}:JacktripSnsTopic.fifo
       Protocol: sqs
       Endpoint: !GetAtt JacktripSqsQueue.Arn
       Region: !Ref CentralRegion
@@ -234,11 +234,12 @@ Resources:
         Destinations:
           - CloudWatchLogsLogGroup:
               LogGroupArn: !GetAtt StateMachineLogGroup.Arn
-      Role: arn:aws:iam::173513177120:role/JacktripStateMachineRole
+      Role: !Sub arn:aws:iam:${AWS::AccountId}:role/JacktripStateMachineRole
   StateMachineLogGroup:
     Type: AWS::Logs::LogGroup
     Properties:
       LogGroupName: !Sub 'Jacktrip-StateMachine-LogGroup-${AWS::Region}'
+      RetentionInDays: 30
 
   RunJacktripDocument:
     Type: AWS::SSM::Document
