--- a/regional.yaml
+++ b/regional.yaml
@@ -12,20 +12,29 @@ Parameters:
     Default: ca-central-1
   UserServerTableName:
     Type: String
-    Default: jacktrip-global-UserServerTable-1CV4VPDXSCTB2
   WebSocketTableName:
     Type: String
-    Default: jacktrip-global-WebSocketConnectionsTable-1CRP9NJGFPHVC
   WebSocketApiId:
     Type: String
-    Default: 30yypq5gz0
+  SourceCodeBucket:
+    Type: String
+  CopyZipsRoleArn:
+    Type: String
+  JacktripStateMachineRoleArn:
+    Type: String
+  CodeObjectKeyPrefix:
+    Type: String
+    AllowedPattern: ^[0-9a-zA-Z-/]*$
 
 Resources:
   # Lambdas
   JacktripCreateServer:
     Type: AWS::Serverless::Function
+    DependsOn: CopyZips
     Properties:
-      CodeUri: ./backend/functions/regional/createServer
+      CodeUri:
+        Bucket: !Ref SourceCodeBucket
+        Key: !Sub '${CodeObjectKeyPrefix}functions/createServer.zip'
       Handler: createServer.handler
       Timeout: 10
       Policies:
@@ -47,8 +56,11 @@ Resources:
 
   JacktripTerminateServer:
     Type: AWS::Serverless::Function
+    DependsOn: CopyZips
     Properties:
-      CodeUri: ./backend/functions/regional/terminateServer
+      CodeUri:
+        Bucket: !Ref SourceCodeBucket
+        Key: !Sub '${CodeObjectKeyPrefix}functions/terminateServer.zip'
       Handler: terminateServer.handler
       Policies:
         - Version: '2012-10-17'
@@ -60,8 +72,11 @@ Resources:
 
   GetServerStatus:
     Type: AWS::Serverless::Function
+    DependsOn: CopyZips
     Properties:
-      CodeUri: ./backend/functions/regional/getServerStatus
+      CodeUri:
+        Bucket: !Ref SourceCodeBucket
+        Key: !Sub '${CodeObjectKeyPrefix}functions/getServerStatus.zip'
       Handler: getServerStatus.handler
       Policies:
         - Version: '2012-10-17'
@@ -74,8 +89,11 @@ Resources:
 
   HandleFail:
     Type: AWS::Serverless::Function
+    DependsOn: CopyZips
     Properties:
-      CodeUri: ./backend/functions/regional/handleFail
+      CodeUri:
+        Bucket: !Ref SourceCodeBucket
+        Key: !Sub '${CodeObjectKeyPrefix}functions/handleFail.zip'
       Handler: handleFail.handler
       Environment:
         Variables:
@@ -91,8 +109,11 @@ Resources:
 
   HandleSuccess:
     Type: AWS::Serverless::Function
+    DependsOn: CopyZips
     Properties:
-      CodeUri: ./backend/functions/regional/handleSuccess
+      CodeUri:
+        Bucket: !Ref SourceCodeBucket
+        Key: !Sub '${CodeObjectKeyPrefix}functions/handleSuccess.zip'
       Handler: handleSuccess.handler
       Environment:
         Variables:
@@ -108,9 +129,12 @@ Resources:
 
   RunJacktripFunction:
     Type: AWS::Serverless::Function
+    DependsOn: CopyZips
     Properties:
+      CodeUri:
+        Bucket: !Ref SourceCodeBucket
+        Key: !Sub '${CodeObjectKeyPrefix}functions/runJacktrip.zip'
       Timeout: 120
-      CodeUri: ./backend/functions/regional/runJacktrip
       Handler: runJacktrip.handler
       Environment:
         Variables:
@@ -120,8 +144,11 @@ Resources:
 
   ContactWebSocket:
     Type: AWS::Serverless::Function
+    DependsOn: CopyZips
     Properties:
-      CodeUri: ./backend/functions/regional/contactWebSocket
+      CodeUri:
+        Bucket: !Ref SourceCodeBucket
+        Key: !Sub '${CodeObjectKeyPrefix}functions/contactWebSocket.zip'
       Handler: contactWebSocket.handler
       Environment:
         Variables:
@@ -143,8 +170,11 @@ Resources:
 
   SqsConsumerFunction:
     Type: AWS::Serverless::Function
+    DependsOn: CopyZips
     Properties:
-      CodeUri: ./backend/functions/regional/sqsConsumer
+      CodeUri:
+        Bucket: !Ref SourceCodeBucket
+        Key: !Sub '${CodeObjectKeyPrefix}functions/sqsConsumer.zip'
       Handler: sqsConsumer.handler
       Events:
         SqsEvent:
@@ -219,7 +249,88 @@ Resources:
   JacktripStateMachine:
     Type: AWS::Serverless::StateMachine
     Properties:
-      DefinitionUri: ./backend/state_machine/state_machine.asl.json
+      Definition:
+        StartAt: EvaluateEventType
+        States:
+          EvaluateEventType:
+            Type: Choice
+            Comment: Evaluate and route the event types
+            Choices:
+              - Variable: $.action
+                StringEquals: create
+                Next: CreateServer
+              - Variable: $.action
+                StringEquals: terminate
+                Next: TerminateServer
+              - Or:
+                  - Variable: $.action
+                    StringEquals: param_change
+                  - Variable: $.action
+                    StringEquals: restart_jacktrip
+                Next: RunJacktrip
+          CreateServer:
+            Type: Task
+            Comment: Create Jacktrip Server
+            Resource: ${CreateServerFunctionArn}
+            ResultPath: $.instanceId
+            Next: WaitCreate
+            Catch:
+              - ErrorEquals:
+                  - States.ALL
+                ResultPath: $.errorInfo
+                Next: HandleFail
+          RunJacktrip:
+            Type: Task
+            Comment: Run SSM document to run Jacktrip on the instance
+            Resource: ${RunJacktripFunctionArn}
+            Next: HandleSuccess
+            ResultPath: null
+          TerminateServer:
+            Type: Task
+            Comment: Terminate Jacktrip Server
+            Resource: ${TerminateServerFunctionArn}
+            ResultPath: $.taskResult
+            Catch:
+              - ErrorEquals:
+                  - States.ALL
+                ResultPath: $.errorInfo
+                Next: HandleFail
+            Next: HandleSuccess
+          WaitCreate:
+            Type: Wait
+            SecondsPath: $.waitTime
+            Next: GetServerStatus
+          GetServerStatus:
+            Type: Task
+            Comment: Check if instance is running
+            Resource: ${GetServerStatusFunctionArn}
+            ResultPath: $.getStatusResult
+            Next: InstanceRunning?
+          InstanceRunning?:
+            Type: Choice
+            Choices:
+              - Variable: $.getStatusResult.status
+                StringEquals: pending
+                Next: WaitCreate
+              - Variable: $.getStatusResult.status
+                StringEquals: running
+                Next: RunJacktrip
+          HandleFail:
+            Type: Task
+            Comment: Cleanup routine after failure
+            Resource: ${HandleFailFunctionArn}
+            ResultPath: $.webSocketMessage
+            Next: ContactWebSocket
+          HandleSuccess:
+            Type: Task
+            Comment: Routine after successful flow
+            Resource: ${HandleSuccessFunctionArn}
+            ResultPath: $.webSocketMessage
+            Next: ContactWebSocket
+          ContactWebSocket:
+            Type: Task
+            Resource: ${ContactWebSocketFunctionArn}
+            End: true
       DefinitionSubstitutions:
         CreateServerFunctionArn: !GetAtt JacktripCreateServer.Arn
         TerminateServerFunctionArn: !GetAtt JacktripTerminateServer.Arn
@@ -234,7 +345,7 @@ Resources:
         Destinations:
           - CloudWatchLogsLogGroup:
               LogGroupArn: !GetAtt StateMachineLogGroup.Arn
-      Role: !Sub arn:aws:iam:${AWS::AccountId}:role/JacktripStateMachineRole
+      Role: !Ref JacktripStateMachineRoleArn
   StateMachineLogGroup:
     Type: AWS::Logs::LogGroup
     Properties:
@@ -273,3 +384,74 @@ Resources:
       Name: ContactWebSocketFunctionName
       Type: String
       Value: !Ref ContactWebSocket
+
+  # Copy Zips - https://aws.amazon.com/blogs/infrastructure-and-automation/deploying-aws-lambda-functions-using-aws-cloudformation-the-portable-way/
+  LambdaZipsBucket:
+    Type: AWS::S3::Bucket
+  CopyZips:
+    Type: Custom::CopyZips
+    Properties:
+      ServiceToken: !GetAtt 'CopyZipsFunction.Arn'
+      DestBucket: !Ref 'LambdaZipsBucket'
+      SourceBucket: !Ref 'SourceCodeBucketName'
+      Prefix: !Ref 'CodeObjectKeyPrefix'
+      Objects:
+        - functions/packages/MyFunction/lambda.zip
+  CopyZipsFunction:
+    Type: AWS::Lambda::Function
+    Properties:
+      Description: Copies objects from a source S3 bucket to a destination
+      Handler: index.handler
+      Runtime: python3.7
+      Role: !Ref 'CopyZipsRoleArn'
+      Timeout: 240
+      Code:
+        ZipFile: |
+          import json
+          import logging
+          import threading
+          import boto3
+          import cfnresponse
+          def copy_objects(source_bucket, dest_bucket, prefix, objects):
+              s3 = boto3.client('s3')
+              for o in objects:
+                  key = prefix + o
+                  copy_source = {
+                      'Bucket': source_bucket,
+                      'Key': key
+                  }
+                  print(('copy_source: %s' % copy_source))
+                  print(('dest_bucket = %s'%dest_bucket))
+                  print(('key = %s' %key))
+                  s3.copy_object(CopySource=copy_source, Bucket=dest_bucket,
+                        Key=key)
+          def delete_objects(bucket, prefix, objects):
+              s3 = boto3.client('s3')
+              objects = {'Objects': [{'Key': prefix + o} for o in objects]}
+              s3.delete_objects(Bucket=bucket, Delete=objects)
+          def timeout(event, context):
+              logging.error('Execution is about to time out, sending failure response to CloudFormation')
+              cfnresponse.send(event, context, cfnresponse.FAILED, {}, None)
+          def handler(event, context):
+              # make sure we send a failure to CloudFormation if the function
+              # is going to timeout
+              timer = threading.Timer((context.get_remaining_time_in_millis()
+                        / 1000.00) - 0.5, timeout, args=[event, context])
+              timer.start()
+              print(('Received event: %s' % json.dumps(event)))
+              status = cfnresponse.SUCCESS
+              try:
+                  source_bucket = event['ResourceProperties']['SourceBucket']
+                  dest_bucket = event['ResourceProperties']['DestBucket']
+                  prefix = event['ResourceProperties']['Prefix']
+                  objects = event['ResourceProperties']['Objects']
+                  if event['RequestType'] == 'Delete':
+                      delete_objects(dest_bucket, prefix, objects)
+                  else:
+                      copy_objects(source_bucket, dest_bucket, prefix, objects)
+              except Exception as e:
+                  logging.error('Exception: %s' % e, exc_info=True)
+                  status = cfnresponse.FAILED
+              finally:
+                  timer.cancel()
+                  cfnresponse.send(event, context, status, {}, None)
