--- a/regional.yaml
+++ b/regional.yaml
@@ -56,7 +56,7 @@ Resources:
             - Effect: Allow
               Action:
                 - iam:PassRole
-              Resource: !Sub 'arn:*:iam:*:${AWS::AccountId}:role/'
+              Resource: !Sub 'arn:*:iam::${AWS::AccountId}:role/'
       Environment:
         Variables:
           ec2SecurityGroup: !Ref JacktripEC2SecurityGroup
